--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
+    <meta name="description" content="Find more food for your hungry little bookworm. 
+            View the top five books in each of the New York Times Best Sellers Lists 
+            for children's literature" />
+    
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">      
+    <!-- manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -19,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>More Books, Please</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
