remove console.logs from components, create smoke and snapshot tests

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" aria-live="polite" aria-atomic="true"></div>
     <script type="module" src="../src/components/utilities.js"></script>
   </body>
 </html>
